--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     <!-- основной контент страницы -->
     <main class="main-section">
         <!-- Секция герой -->
-        <!-- <section class="hero overlay">
+        <section class="hero overlay">
             <div class="hero__content container">
                 <h1 class="hero__text">Эффективные решения <br> для вашего бизнеса</h1>
                 <button data-modal-open type="button" class="button hero__button ">Заказать услугу</button>
             </div>
-        </section> -->
+        </section>
 
         <!-- Секция преимущества компании -->
-        <section class="advantages-section container">
+        <!-- <section class="advantages-section container">
             <h2 class="visually-hidden">Преимущества компании</h2>
             <ul class="advantages">
                 <li class="advantage atention">
@@ -83,7 +83,7 @@
                         заданий.</p>
                 </li>
             </ul>
-        </section>
+        </section> -->
 
         <!-- Секция список услуг -->
         <!-- <section class="company-services container">
