--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
 
         <!-- Секция преимущества компании -->
-        <!-- <section class="advantages-section container">
+        <section class="advantages-section container">
             <h2 class="visually-hidden">Преимущества компании</h2>
             <ul class="advantages">
                 <li class="advantage atention">
@@ -83,7 +83,7 @@
                         заданий.</p>
                 </li>
             </ul>
-        </section> -->
+        </section>
 
         <!-- Секция список услуг -->
         <!-- <section class="company-services container">
