--- a/index.html
+++ b/index.html
@@ -86,34 +86,54 @@
         </section>
 
         <!-- Секция список услуг -->
-        <!-- <section class="company-services container">
+        <section class="company-services container">
             <h2 class="company-services__head">Чем мы занимаемся</h2>
             <ul class="company-competence">
                 <li class="company-competence__item">
                     <div class="company-competence__tumb">
-                    <img src="./images/box-1-2.jpg" alt="верстка_сайтов" width="370">
+                        <picture>
+                            <source media="(min-width:1200px)" srcset="./images/desktop/web-site.webp, 1x" ,
+                                srcset="./images/desktope/web-site@2x.webp, 2x"
+                                type="image/webp"> 
+                            <source media="(min-width:1200px)" srcset="./images/desktop/web-site.jpg, 1x",
+                            srcset="./images/desktope/web-site@2x.jpg, 2x">
+                            <img src="#" alt="верстка_сайтов">
+                        </picture>
+                    
                     <h3 class="company-competence__attachment">Десктопные приложения</h3>
                     </div>
                 </li>
                 <div class="company-competence__tumb">
-                    <img src="./images/box-2-2.jpg" alt="верстка_сайтов" width="370">
+                    <picture>
+                        <source media="(min-width:1200px)" srcset="./images/desktop/mobile-site.webp, 1x" ,
+                            srcset="./images/desktope/mobile-site@2x.webp, 2x" type="image/webp">
+                        <source media="(min-width:1200px)" srcset="./images/desktop/mobile-site.jpg, 1x" ,
+                            srcset="./images/desktope/mobile-site@2x.jpg, 2x">
+                    <img src="#" alt="верстка_сайтов" >
+                    </picture>
                     <h3 class="company-competence__attachment">Мобильные приложения</h3>
                 </div>
                 <div class="company-competence__tumb">
-                    <img src="./images/box-3-2.jpg" alt="верстка_сайтов" width="370">
+                    <picture>
+                        <source media="(min-width:1200px)" srcset="./images/desktop/design.webp, 1x" ,
+                            srcset="./images/desktope/design@2x.webp, 2x" type="image/webp">
+                        <source media="(min-width:1200px)" srcset="./images/desktop/design.jpg, 1x" ,
+                            srcset="./images/desktope/design@2x.jpg, 2x">
+                    <img src="#" alt="верстка_сайтов" >
+                    </picture>
                     <h3 class="company-competence__attachment">Дизайнерские решения</h3>
                 </div>
             </ul>
-        </section> -->
+        </section>
 
         <!-- Секция команды -->
-        <!-- <section class="team-section">
+        <section class="team-section">
             <div class="container">
                 <h2 class="team-section__head">Наша команда</h2>
 
-                <ul class="team-cards container"> -->
+                <ul class="team-cards container">
                     <!-- сотрудник 1 -->
-                    <!-- <li class="team-cards__list-item">
+                    <li class="team-cards__list-item">
                         <img src="./images/img-1-2.jpg" alt="фото_сотрудника1" width="270">
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Игорь Демьяненко</h3>
@@ -143,9 +163,9 @@
                                     </svg> </a>
                             </li>
                         </ul>
-                    </li> -->
+                    </li>
                 <!-- сотрудник 2 -->
-                    <!-- <li class="team-cards__list-item">
+                    <li class="team-cards__list-item">
                         <img src="./images/img-2-2.jpg" alt="фото_сотрудника2" width="270">
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Ольга Репина</h3>
@@ -174,9 +194,9 @@
                                     </svg> </a>
                             </li>
                         </ul>
-                    </li> -->
+                    </li>
                     <!-- сотрудник 3 -->
-                    <!-- <li class="team-cards__list-item">
+                    <li class="team-cards__list-item">
                         <img src="./images/img-3-2.jpg" alt="фото_сотрудника3" width="270">
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Николай Тарасов</h3>
@@ -205,10 +225,10 @@
                                     </svg> </a>
                             </li>
                         </ul>
-                    </li> -->
+                    </li>
                     <!-- сотрудник 4 -->
-                    <!-- <li class="team-cards__list-item"> -->
-                        <!-- <img src="./images/img-4-2.jpg" alt="фото_сотрудника4" width="270">
+                    <li class="team-cards__list-item">
+                        <img src="./images/img-4-2.jpg" alt="фото_сотрудника4" width="270">
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Михаил Ермаков</h3>
                             <p lang="en" class="team-cards__text">UI Designer</p>
@@ -235,11 +255,11 @@
                                         <use href="./images/sprite.svg#icon-linkedin"></use>
                                     </svg> </a>
                             </li>
-                        </ul> -->
-                    <!-- </li> -->
-                <!-- </ul> -->
-            <!-- </div> -->
-        <!-- </section> -->
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <!-- <section class="clients-section container">
             <h2 class="clients-section__title">Постоянные клиенты</h2>
             <ul class="clients-section-list">
