--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
                             <source media="(min-width:768px)" srcset="./images/tablet/team1.jpg, 1x" ,
                                 srcset="./images/tablet/team1@2x.jpg, 2x">
 
-                            <source media="(min-width:270px)" srcset="./images/mobile/team1.webp, 1x" , 
+                            <source media="(min-width:480px)" srcset="./images/mobile/team1.webp, 1x" , 
                             srcset="./images/mobile/team1@2x.webp, 2x"
                                 type="image/webp">
-                            <source media="(min-width:270px)" srcset="./images/mobile/team1.jpg, 1x" , 
+                            <source media="(min-width:480px)" srcset="./images/mobile/team1.jpg, 1x" , 
                             srcset="./images/mobile/team1@2x.jpg, 2x">
-                        <img src="#" alt="фото_сотрудника1">
+                        <img src="./images/img-1-2.jpg" alt="фото_сотрудника1" class="team-cards__img">
                         </picture>
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Игорь Демьяненко</h3>
@@ -196,7 +196,7 @@
                             <source media="(min-width:270px)" srcset="./images/mobile/team2.webp, 1x" , srcset="./images/mobile/team2@2x.webp, 2x"
                                 type="image/webp">
                             <source media="(min-width:270px)" srcset="./images/mobile/team2.jpg, 1x" , srcset="./images/mobile/team2@2x.jpg, 2x">
-                        <img src="#" alt="фото_сотрудника2">
+                        <img src="./images/img-2-2.jpg" alt="фото_сотрудника2">
                     </picture>
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Ольга Репина</h3>
@@ -241,7 +241,7 @@
                             <source media="(min-width:270px)" srcset="./images/mobile/team3.webp, 1x" , srcset="./images/mobile/team3@2x.webp, 2x"
                                 type="image/webp">
                             <source media="(min-width:270px)" srcset="./images/mobile/team3.jpg, 1x" , srcset="./images/mobile/team3@2x.jpg, 2x">
-                        <img src="#" alt="фото_сотрудника3">
+                        <img src="./images/img-3-2.jpg" alt="фото_сотрудника3">
                         </picture>
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Николай Тарасов</h3>
@@ -286,12 +286,13 @@
                             <source media="(min-width:270px)" srcset="./images/mobile/team4.webp, 1x" , srcset="./images/mobile/team4@2x.webp, 2x"
                                 type="image/webp">
                             <source media="(min-width:270px)" srcset="./images/mobile/team4.jpg, 1x" , srcset="./images/mobile/team4@2x.jpg, 2x">
-                        <img src="#" alt="фото_сотрудника4">
+                        <img src="./images/img-4-2.jpg" alt="фото_сотрудника4">
                         </picture>
                         <div class="team-cards__card">
                             <h3 class="team-cards__title">Михаил Ермаков</h3>
                             <p lang="en" class="team-cards__text">UI Designer</p>
                         </div>
+
                         <ul class="team-network">
                             <li class="team-network__item-list">
                                 <a href="#" class="team-network__item">
@@ -319,7 +320,7 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="clients-section container">
+        <section class="clients-section container">
             <h2 class="clients-section__title">Постоянные клиенты</h2>
             <ul class="clients-section-list">
                 <li class="clients-section-list__client">
@@ -353,7 +354,7 @@
                     </a>
                 </li>
             </ul>
-        </section> -->
+        </section>
     </main>
     <!-- футер -->
     <!-- <footer class="footer">
