--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                 </ul>
             </div>
         </section>
+        <!-- Секция клиенты -->
         <section class="clients-section container">
             <h2 class="clients-section__title">Постоянные клиенты</h2>
             <ul class="clients-section-list">
@@ -357,7 +358,7 @@
         </section>
     </main>
     <!-- футер -->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <section class="footer__section container">
             <div class="footer__main">
                 <div class="logo footer__logo">
@@ -365,7 +366,7 @@
                         <span class="logo__main">Web</span><span class="logo__footer-color">Studio</span>
                     </a>
                 </div>
-                <address>
+                <address class="footer__address-section">
                     <p class="footer__address">г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="footer__contacts">
                         <li class="footer__item"><a href="mailto:info@devstudio.com"
@@ -400,9 +401,9 @@
                             </svg> </a>
                     </li>
                 </ul>
-            </div> -->
+            </div>
             <!-- форма футера -->
-            <!-- <form action="#" class="footer-form">
+            <form action="#" class="footer-form">
                 <p class="footer-form__title">Подпишитесь на рассылку</p>
                 <div class="footer-form__position">
                     <label for="name" class="footer-form__label">
@@ -412,7 +413,7 @@
                 </div>
             </form>
         </section>
-    </footer> -->
+    </footer>
 
     <!-- модальное окно -->
     <!-- <div class="backdrop is-hidden" data-modal>
