--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Шапка сайта-->
-    <!-- <header class="header">
+    <header class="header">
         <section class="header__main container">
             <div class="logo header__logo">
                 <a href="./index.html">
@@ -46,7 +46,7 @@
                 </li>
             </ul>
         </section>
-    </header> -->
+    </header>
 
     <!-- основной контент страницы -->
     <main class="main-section">
