--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <span class="logo__main">Web</span><span class="logo__header-color">Studio</span>
                 </a>
             </div>
+
             <nav>
                 <ul class="site-nav">
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__link active">Студия</a></li>
@@ -45,7 +46,21 @@
                         </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
+            <button class="burger-btn">
+                <svg class="burger-btn__icon">
+                    <use href="./images/sprite.svg#icon-menu-burger"></use>
+                </svg>
+            </button>
         </section>
+        <div class="mobile-menu mobile-menu__close-btn">
+            <div class="contaner mobile-menu__container">
+                <button class="close-btn">
+                    <svg class="close-btn__icon">
+                        <use href="./images/sprite.svg#icon-close-btn"></use>
+                    </svg>
+                </button>
+            </div>
+        </div>
     </header>
 
     <!-- основной контент страницы -->
