--- a/index.html
+++ b/index.html
@@ -52,7 +52,34 @@
                 </svg>
             </button>
         </section>
-        
+        <div class="mobile-menu">
+            <div class="container mobile-menu__container">
+                <button class="close-btn mobile-menu__close-btn">
+                    <svg class="close-btn__icon">
+                        <use href="./images/sprite.svg#icon-close-btn"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-nav">
+                    <li class="mobile-nav__item"><a href="./index.html" class="mobile-nav__link">Студия</a></li>
+                    <li class="mobile-nav__item"><a href="./portfolio.html" class="mobile-nav__link">Портфолио</a></li>
+                    <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Контакты</a></li>
+                </ul>
+                <ul class="mobile-address">
+                    <li class="mobile-address__item">
+                        <a href="tel:+380961111111" class="header-address__link">+38 096 111 11 11</a>
+                    </li>
+                    <li class="mobile-address__item">
+                        <a href="mailto:info@devstudio.com" class="mobile-address__link">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-network">
+                    <li class="mobile-network__item"><a href="#" class="mobile-network__link">Instagram</a></li>
+                    <li class="mobile-network__item"><a href="#" class="mobile-network__link">Twitter</a></li>
+                    <li class="mobile-network__item"><a href="#" class="mobile-network__link">Facebook</a></li>
+                    <li class="mobile-network__item"><a href="#" class="mobile-network__link">LinkedIn</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <!-- основной контент страницы -->
