--- a/index.html
+++ b/index.html
@@ -46,30 +46,30 @@
                         </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
-            <button class="burger-btn">
+            <button class="burger-btn js-open-menu">
                 <svg class="burger-btn__icon">
                     <use href="./images/sprite.svg#icon-menu-burger"></use>
                 </svg>
             </button>
         </section>
-        <div class="mobile-menu">
-            <div class="container mobile-menu__container">
-                <button class="close-btn mobile-menu__close-btn">
+        <div class="mobile-menu js-menu-container" id="mobile-menu">
+            <div class="container mobile-menu__container ">
+                <button class="close-btn mobile-menu__close-btn js-close-menu">
                     <svg class="close-btn__icon">
                         <use href="./images/sprite.svg#icon-close-btn"></use>
                     </svg>
                 </button>
                 <ul class="mobile-nav">
-                    <li class="mobile-nav__item"><a href="./index.html" class="mobile-nav__link">Студия</a></li>
+                    <li class="mobile-nav__item"><a href="./index.html" class="mobile-nav__link mobole-nav__active">Студия</a></li>
                     <li class="mobile-nav__item"><a href="./portfolio.html" class="mobile-nav__link">Портфолио</a></li>
                     <li class="mobile-nav__item"><a href="#" class="mobile-nav__link">Контакты</a></li>
                 </ul>
                 <ul class="mobile-address">
-                    <li class="mobile-address__item">
-                        <a href="tel:+380961111111" class="header-address__link">+38 096 111 11 11</a>
+                    <li class="mobile-address__numb">
+                        <a href="tel:+380961111111" class="mobile-address__numb-link">+38 096 111 11 11</a>
                     </li>
-                    <li class="mobile-address__item">
-                        <a href="mailto:info@devstudio.com" class="mobile-address__link">info@devstudio.com</a>
+                    <li class="mobile-address__mail">
+                        <a href="mailto:info@devstudio.com" class="mobile-address__mail-link">info@devstudio.com</a>
                     </li>
                 </ul>
                 <ul class="mobile-network">
@@ -535,6 +535,10 @@
         </div>
     </div> -->
     <!-- скрипт -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
     <!-- <script src="./js/modal.js"></script> -->
 </body>
 
