--- a/portfolio.html
+++ b/portfolio.html
@@ -398,37 +398,42 @@
                         <span class="logo__main">Web</span><span class="logo__footer-color">Studio</span>
                     </a>
                 </div>
-                <address>
+                <address class="footer__address-section">
                     <p class="footer__address">г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="footer__contacts">
                         <li class="footer__item"><a href="mailto:info@devstudio.com"
                                 class="footer__link">info@devstudio.com</a></li>
-                        <li class="footer__item"><a href="tel:+380961111111" class="footer__link">+38 096 111 11 11</a></li>
+                        <li class="footer__item"><a href="tel:+380961111111" class="footer__link">+38 096 111 11 11</a>
+                        </li>
                     </ul>
                 </address>
             </div>
-
+    
             <div class="footer-list">
                 <p class="footer-list__title">присоединяйтесь</p>
-
+    
                 <ul class="footer-network">
-                    <li class="footer-network__list-item"> 
-                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px" height="20px">
+                    <li class="footer-network__list-item">
+                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px"
+                                height="20px">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
                             </svg> </a>
                     </li>
                     <li class="footer-network__list-item">
-                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px" height="20px">
+                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px"
+                                height="20px">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
                             </svg> </a>
                     </li>
                     <li class="footer-network__list-item">
-                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px" height="20px">
+                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px"
+                                height="20px">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg> </a>
                     </li>
                     <li class="footer-network__list-item">
-                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px" height="20px">
+                        <a href="#" class="footer-network__item"><svg class="footer-network__icon" width="20px"
+                                height="20px">
                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                             </svg> </a>
                     </li>
