--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     </footer>
 
     <!-- модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button data-modal-close class="close-modal">
                 <svg class="modal-icon">
@@ -529,17 +529,17 @@
                     <textarea name="user-comment" class="modal-form-text" placeholder="Введите текст"></textarea>
                 </label>
                 <input type="checkbox" id="checkbox" name="user-agree" class="modal-form-check visually-hidden" required >
-                <label for="checkbox" class="form-check-policy">Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a></label>
+                <label for="checkbox" class="form-check-policy">Соглашаюсь с рассылкой и принимаю<a href="#">Условия договора</a></label>
                 <button type="submit" class="form-button">Отправить</button>
             </form>
         </div>
-    </div> -->
+    </div>
     <!-- скрипт -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
     <script defer src="js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
