--- a/index.html
+++ b/index.html
@@ -375,43 +375,43 @@
         <section class="clients-section container">
             <h2 class="clients-section__title">Постоянные клиенты</h2>
             <ul class="clients-section-list">
-                <li class="clients-section-list__client">
-                    <a href="#">
+                <li >
+                    <a href="#" class="clients-section-list__client">
                         <svg class="clients-section-list__icon">
                             <use href="./images/sprite.svg#icon-yago"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="clients-section-list__client">
-                    <a href="#">
+                <li >
+                    <a href="#" class="clients-section-list__client">
                         <svg class="clients-section-list__icon">
                             <use href="./images/sprite.svg#icon-tagline"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="clients-section-list__client">
-                    <a href="#">
+                <li >
+                    <a href="#" class="clients-section-list__client">
                         <svg class="clients-section-list__icon">
                             <use href="./images/sprite.svg#icon-company"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="clients-section-list__client">
-                    <a href="#">
+                <li >
+                    <a href="#" class="clients-section-list__client">
                         <svg class="clients-section-list__icon">
                             <use href="./images/sprite.svg#icon-foster-peters"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="clients-section-list__client">
-                    <a href="#">
+                <li >
+                    <a href="#" class="clients-section-list__client">
                         <svg class="clients-section-list__icon">
                             <use href="./images/sprite.svg#icon-brand"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="clients-section-list__client">
-                    <a href="#">
+                <li>
+                    <a href="#" class="clients-section-list__client">
                         <svg class="clients-section-list__icon">
                             <use href="./images/sprite.svg#icon-tag"></use>
                         </svg>
